--- a/styles.css
+++ b/styles.css
@@ -30,3 +30,29 @@
     border: 3px solid #00ffff;
     object-fit: cover;
   }
+
+  /* Carousel Section */
+  .card-img-top {
+    height: 400px;
+    max-height: 400px;
+    object-fit: cover;
+  }
+ .carousel-control-prev-icon,
+ .carousel-control-next-icon {
+  background-color: rgba(6, 8, 8, 0.7);
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  padding: 10px;
+}
+
+/* skill section */
+.skill-card {
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+.skill-card:hover {
+    transform: scale(1.1); 
+    box-shadow: 0px 0px 15px rgba(0, 255, 255, 0.7); /* Soft cyan glow */
+  }
+
+  
