--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,11 @@
   border-radius: 50%;
   padding: 10px;
 }
+#projectsCarousel{
+    border: none;
+    box-shadow: 0px 0px 15px rgba(0, 255, 255, 0.2);
+    border-radius: 8px;
+}
 
 /* skill section */
 .skill-card {
@@ -55,4 +60,22 @@
     box-shadow: 0px 0px 15px rgba(0, 255, 255, 0.7); /* Soft cyan glow */
   }
 
+/* resume section */
+.resume-preview iframe {
+    border: none;
+    box-shadow: 0px 0px 15px rgba(0, 255, 255, 0.2);
+    border-radius: 8px;
+  }
+  /* footer section */
+footer {
+    font-size: 14px;
+  }
+  footer a {
+    text-decoration: none;
+    transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
+  }
   
+  footer a:hover {
+    color: #00ffff;
+    transform: scale(1.1);
+  } 
