--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,8 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-height: 500px; 
+  min-height: 100%;
+  height: 100%;  
 }
 .card-img-top {
   height: 250px;
@@ -69,6 +70,7 @@ body {
   display: flex;
   justify-content: space-between;
   gap: 5px;
+  margin-top: auto;
 }
 
 /* Timeline Section */
@@ -170,6 +172,7 @@ footer {
   }
   .card {
       min-height: 400px;
+      
   }
 }
 
